<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/detailImage"
			android:layout_width="0dp"
			android:layout_height="250dp"
			android:contentDescription="@string/content_description_artist_image"
			android:scaleType="centerCrop"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:src="@drawable/bg_no_image" />

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/detailArtistAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?attr/selectableItemBackground"
			android:padding="@dimen/size_16"
			android:src="@drawable/ic_not_bookmarked"
			app:layout_constraintBottom_toBottomOf="@+id/detailImage"
			app:layout_constraintEnd_toEndOf="parent"
			app:srcCompat="@drawable/ic_not_bookmarked"
			app:tint="?attr/colorSecondary" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailNameInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailImage"
			app:title="@string/artist_detail_name_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailDisambiguationInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailNameInfo"
			app:title="@string/artist_detail_disambiguation_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailRealNameInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailDisambiguationInfo"
			app:title="@string/artist_detail_real_name_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailGenderInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailRealNameInfo"
			app:title="@string/artist_detail_gender_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailTypeInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailGenderInfo"
			app:title="@string/artist_detail_type_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailCountryInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailTypeInfo"
			app:title="@string/artist_detail_country_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailRatingInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailCountryInfo"
			app:title="@string/artist_detail_rating_title" />

		<pl.btwarog.artis.ui.widget.InfoView
			android:id="@+id/detailProfileInfo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/size_16"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/detailRatingInfo"
			app:title="@string/artist_detail_profile_title" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>